--- a/src/utils/languages/en/commands_en.json
+++ b/src/utils/languages/en/commands_en.json
@@ -275,13 +275,14 @@
     "word.log": "log",
     "word.tempban": "Temporary ban",
     "word.tempmute": "Temporary Mute",
-    "logs.user.start": "Du wurdest wegen {r}",
-    "log.word.mute": "muted",
-    "log.word.ban": "banned",
-    "log.word.warn": "warned",
-    "log.duration": "bis zum {d}",
-    "log.guildname": "auf dem {n}",
-    "log.points": "You now have {p} points.",
+    "word.log.ban": "banned",
+    "word.log.mute": "muted",
+
+    "log.message.perm": "You have been permanently {t} from the server `{n}` because you have exceeded the maximum number of warning points.",
+    "log.message.temp": "You have been {t} from the server `{n}` for `{d}` because you have exceeded the maximum number of warning points.",
+    "log.message.log": "You have been warned on the server `{n}` for `{r}`. You now have `{p}` warn points.",
+    "log.message.kick": "You have been kicked on the server `{n}` for `{r}`.",
+
     "reason.blacklistedword": "Forbidden word",
     "reason.invite": "Discord invitation",
     "reason.link": "Link",
