--- a/src/utils/languages/de/commands_de.json
+++ b/src/utils/languages/de/commands_de.json
@@ -221,18 +221,18 @@
     "name.embed.title": "Namen Änderung",
     "name.embed.description": "Der User **{b.display_name}** heißt nun **{a.display_name}**.",
     "edit.embed.title": "Nachricht editiert",
-    "edit.embed.description": "**{u}** hat eine Nachricht in {c}+ editiert.\n[Springe zur Nachricht]({l})",
+    "edit.embed.description": "**{u}** hat eine Nachricht in {c.mention} editiert.\n[Springe zur Nachricht]({l})",
     "edit.embed.new.title": "Neue Nachricht",
     "edit.embed.old.title": "Alte Nachricht",
     "delete.embed.title": "Nachricht gelöscht",
-    "delete.embed.description": "Eine Nachricht von **{u}** wurde aus {c} gelöscht.",
+    "delete.embed.description": "Eine Nachricht von **{u}** wurde aus {c.mention} gelöscht.",
     "delete.embed.message.title": "Nachricht",
     "remove.embed.title": "Server verlassen",
-    "remove.embed.description": "Der User **{u}** hat den Server nach {d} Tagen verlassen.",
+    "remove.embed.description": "Der User **{u}** hat den Server nach `{d}` Tagen verlassen.",
     "join.embed.title": "Server beigetreten",
-    "join.embed.description": "Der User **{u}** hat den Server betreten.\nDieser Account ist {d} Tage alt.",
+    "join.embed.description": "Der User **{u}** hat den Server betreten.\nDieser Account ist `{d}` Tage alt.",
     "ban.embed.title": "User gebannt",
-    "ban.embed.description": "Der User **{u}** wurde nach {d} Tagen auf dem Server gebannt.",
+    "ban.embed.description": "Der User **{u}** wurde nach `{d}` Tagen auf dem Server gebannt.",
     "unban.embed.title": "User entbannt",
     "unban.embed.description": "Der User **{u}** wurde entbannt. Dieser Account ist {d} Tage alt.",
     "words.roles": "Rollen",
