correctly translate logging module

--- a/src/utils/languages/en/commands_en.json
+++ b/src/utils/languages/en/commands_en.json
@@ -214,28 +214,28 @@
     "copyblacklist.message": "The blacklist was updated."
   },
   "logging": {
-    "ban.embed.title": "MEMBER [BAN]",
-    "ban.embed.description": "{u} [{u.id}]\njoined {d} days ago",
-    "unban.embed.title": "MEMBER [UNBAN]",
-    "unban.embed.description": "{u} [{u.id}]\ncreated {d} days ago",
-    "join.embed.title": "MEMBER [JOIN]",
-    "remove.embed.title": "MEMBER [LEAVE]",
-    "words.roles": "Roles",
-    "delete.embed.title": "MESSAGE [DELETED]",
-    "delete.embed.description": "{u} [{u.id}]",
-    "delete.embed.message.title": "Message",
-    "delete.embed.attachment.title": "Attachments",
-    "edit.embed.title": "MESSAGE [EDITED]",
-    "edit.embed.description": "```{u} [{u.id}]```[Jump to message]({l})",
+    "role.embed.title": "Roles changed",
+    "role.embed.remove": "**{u}** has lost the role **{r.mention}**.",
+    "role.embed.add": "**{u}** has received the role **{r.mention}**.",
+    "name.embed.title": "Name changed",
+    "name.embed.description": "The user **{b.display_name}** is now named **{a.display_name}**.",
+    "edit.embed.title": "Message edited",
+    "edit.embed.description": "**{u}** edited a message in {c}.\n[Jump to message]({l})",
     "edit.embed.new.title": "New message",
-    "edit.embed.old.title": "old message",
-    "word.channel": "Channel",
-    "update.embed.name.title": "MEMBER [NAME UPDATE]",
-    "update.embed.name.new.title": "New name",
-    "update.embed.name.old.title": "Old name",
-    "update.embed.role.title": "MEMBER [ROLE CHANGED]",
-    "update.embed.role.nameadd": "Role added",
-    "update.embed.role.nameremove": "Role removed"
+    "edit.embed.old.title": "Old message",
+    "delete.embed.title": "Message deleted",
+    "delete.embed.description": "A message from **{u}** was deleted from {c.mention}.",
+    "delete.embed.message.title": "Message",
+    "remove.embed.title": "Server left",
+    "remove.embed.description": "The user **{u}** has left the server after `{d}` days.",
+    "join.embed.title": "Server joined",
+    "join.embed.description": "The user **{u}** has entered the server.\nThis account is {d} days old.",
+    "ban.embed.title": "User ban",
+    "ban.embed.description": "The user **{u}** was banned after `{d}` days on the server.",
+    "unban.embed.title": "User unban",
+    "unban.embed.description": "The user **{u}** has been unbanned. This account is `{d}` days old.",
+    "words.roles": "Roles",
+    "word.channel": "Channels"
   },
   "timers": {
     "giveaway.event.nowinners": "Das Giveaway `{w}` Niemand hat teilgenommen. Es gibt keine Gewinner :(",
