--- a/src/utils/languages/en/commands_en.json
+++ b/src/utils/languages/en/commands_en.json
@@ -266,13 +266,13 @@
     "mute.embed.description": "The user **{u}** was muted for **{r}** in {c.mention}.",
     "log.embed.description": "The user **{u}** was warned for **{r}** in {c.mention}.",
     "word.automod": "Automod",
-    "word.points": "points",
+    "word.points": "Points",
     "word.punishuntil": "Punished until",
-    "word.message": "message",
-    "word.channel": "channel",
-    "word.kick": "kick",
-    "word.ban": "ban",
-    "word.log": "log",
+    "word.message": "Message",
+    "word.channel": "Channel",
+    "word.kick": "Kick",
+    "word.ban": "Ban",
+    "word.log": "Log",
     "word.tempban": "Temporary ban",
     "word.tempmute": "Temporary Mute",
     "word.log.ban": "banned",
