fix error using clear command

--- a/src/utils/languages/en/commands_en.json
+++ b/src/utils/languages/en/commands_en.json
@@ -25,7 +25,7 @@
     "word.tempmute": "Tempmute",
     "word.tempban": "Tempban",
     "word.clear": "Clear",
-    "word.amount": "Quantity",
+    "word.amount": "Amount",
     "word.duration": "Duration",
     "word.unban": "Unban",
     "word.unmute": "UNmute",
