fix typo and capitalize most words

--- a/src/utils/languages/en/commands_en.json
+++ b/src/utils/languages/en/commands_en.json
@@ -127,9 +127,9 @@
     "info.embed.account.name": "Account",
     "info.embed.account.value": "age: {jd}\ndays ago: {dd}",
     "info.embed.server.name": "Guild",
-    "info.embed.server.value": "joined: {jg}\ndays ago: {sjg}\nposition: {jp}",
+    "info.embed.server.value": "Joined: {jg}\nDays ago: {sjg}\nPosition: {jp}",
     "info.embed.roles.name": "Roles ({r})",
-    "info.embed.falgs.name": "Badges ({f})",
+    "info.embed.flags.name": "Badges ({f})",
     "todayjoined.message": "In the last 24 hours `{j}` users have joined the server.",
     "joined.error.invalidposition": "No user is on this join position.",
     "joined.embed.title": "Join Position",
@@ -138,20 +138,20 @@
     "role.message": "The role {m} has {l} members.",
     "vote.message": "Vote [here]({l}) for me :D",
     "bot.embed.owner.name": "owner",
-    "bot.embed.guilds.name": "number of servers",
-    "bot.embed.users.name": "number of users",
-    "bot.embed.versions.name": "versions",
-    "bot.word.dashboard": "dashboard",
-    "bot.word.invite": "invitation",
-    "bot.word.source": "source code",
-    "guild.embed.description": "name: {g.name}\nIiD: {g.id}\nowner: {g.owner}\nregion: {g.region}",
-    "guild.embed.members.name": "members",
-    "guild.embed.data.name": "data",
-    "guild.embed.data.value": "created: {c}\ndays after {d}",
-    "guild.embed.channels.name": "channel",
-    "guild.embed.channels.value": "total: {a}\ntext channels: {t}\nvoice channels: {v}\ncategories: {c}",
-    "guild.embed.emojis.name": "emojis ({e})",
-    "guild.embed.boosts.name": "boosts ({l})",
+    "bot.embed.guilds.name": "Number of servers",
+    "bot.embed.users.name": "Number of users",
+    "bot.embed.versions.name": "Versions",
+    "bot.word.dashboard": "Dashboard",
+    "bot.word.invite": "Invitation",
+    "bot.word.source": "Source code",
+    "guild.embed.description": "Name: {g.name}\nID: {g.id}\nOwner: {g.owner}\nRegion: {g.region}",
+    "guild.embed.members.name": "Members",
+    "guild.embed.data.name": "Data",
+    "guild.embed.data.value": "Created: {c}\nDays after {d}",
+    "guild.embed.channels.name": "Channel",
+    "guild.embed.channels.value": "Total: {a}\nText channels: {t}\nVoice channels: {v}\nCategories: {c}",
+    "guild.embed.emojis.name": "Emojis ({e})",
+    "guild.embed.boosts.name": "Boosts ({l})",
     "guild.embed.boosts.value": "{b} of {m}"
   },
   "leveling": {
