rename remove command to clear

--- a/src/utils/languages/de/help_de.json
+++ b/src/utils/languages/de/help_de.json
@@ -219,7 +219,7 @@
   "multiban": [
     "Bannt mehrere User vom Server."
   ],
-  "remove": [
+  "clear": [
     "Durchsucht die angegebenen Nachrichten nach den Kriterien und löscht diese.",
     {
       "embeds": "Löscht alle Nachrichten die Embeds enthalten.",
